ana ekran recruitment progress card ekleme,  küçük model değişiklikleri

--- a/hr/templates/hr_dashboard.html
+++ b/hr/templates/hr_dashboard.html
@@ -154,30 +154,59 @@
                             <div class="col-lg-6 mb-4">
                                 <div class="card shadow mb-4">
                                     <div class="card-header py-3">
-                                        <h6 class="text-primary fw-bold m-0">Projects</h6>
+                                        <h6 class="text-primary fw-bold m-0">Recruitment Progress</h6>
                                     </div>
                                     <div class="card-body">
-                                        <h4 class="small fw-bold">Server migration<span class="float-end">20%</span></h4>
-                                        <div class="progress mb-4">
-                                            <div class="progress-bar bg-danger" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%;"><span class="visually-hidden">20%</span></div>
-                                        </div>
-                                        <h4 class="small fw-bold">Sales tracking<span class="float-end">40%</span></h4>
-                                        <div class="progress mb-4">
-                                            <div class="progress-bar bg-warning" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%;"><span class="visually-hidden">40%</span></div>
-                                        </div>
-                                        <h4 class="small fw-bold">Customer Database<span class="float-end">60%</span></h4>
-                                        <div class="progress mb-4">
-                                            <div class="progress-bar bg-primary" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"><span class="visually-hidden">60%</span></div>
-                                        </div>
-                                        <h4 class="small fw-bold">Payout Details<span class="float-end">80%</span></h4>
-                                        <div class="progress mb-4">
-                                            <div class="progress-bar bg-info" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"><span class="visually-hidden">80%</span></div>
-                                        </div>
-                                        <h4 class="small fw-bold">Account setup<span class="float-end">Complete!</span></h4>
-                                        <div class="progress mb-4">
-                                            <div class="progress-bar bg-success" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"><span class="visually-hidden">100%</span></div>
-                                        </div>
-                                    </div>
+                                                {% with applications|dictsortreversed:"status" as filtered_applications %}
+                                                    {% for application in filtered_applications %}
+                                                        {% if application.assigned_by == request.user %}
+                                                            <h4 class="small fw-bold">
+                                                                <div>
+                                                                    <a href="{% url 'candidate_profile' application.candidate.id %}" class="text-primary font-weight-bold">
+                                                                        {{ application.candidate.name }} {{ application.candidate.surname }}
+                                                                    </a>
+                                                                    <span class="float-end">Pozisyon: {{ application.job.position }}</span>
+
+                                                                    <br>
+                                                                    <small class="text-muted">
+                                                                        <i class="fas fa-phone-alt"></i> {{ application.candidate.phone }}
+                                                                    </small>
+                                                                </div>
+
+                                                            <span class="float-end">
+                                                                <p class="mb-1">
+                                                                    <strong>Status:</strong>
+                                                                    <span class="badge {% if application.status == 'Pending' %}bg-warning
+                                                                                   {% elif application.status == 'Interviewing' %}bg-info
+                                                                                   {% elif application.status == 'HR Assesment' %}bg-primary
+                                                                                   {% elif application.status == 'Accepted' %}bg-success
+                                                                                   {% elif application.status == 'Rejected' %}bg-danger
+                                                                                   {% endif %}">
+                                                                        {{ application.status }}
+                                                                    </span>
+                                                                </p>
+                                                            </span>
+                                                            </h4>
+                                                            <div class="progress mb-4">
+
+                                                                {% if application.status == "Pending" %}
+                                                                    <div class="progress-bar bg-danger" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%;">
+                                                                        <span class="float-end">20%</span>
+                                                                    </div>
+                                                                {% elif application.status == "Interviewing" %}
+                                                                    <div class="progress-bar bg-warning" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%;">
+                                                                        <span class="float-end">40%</span>
+                                                                    </div>
+                                                                {% elif application.status == "HR Assesment" %}
+                                                                    <div class="progress-bar bg-primary" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+                                                                        <span class="float-end">60%</span>
+                                                                    </div>
+                                                                {% endif %}
+                                                            </div>
+                                                        {% endif %}
+                                                    {% endfor %}
+                                                {% endwith %}
+                                            </div>
                                 </div>
                                 <div class="card shadow mb-4">
                                     <div class="card-header py-3">
