--- a/biko_hr/templates/home.html
+++ b/biko_hr/templates/home.html
@@ -61,14 +61,16 @@
                         <a href="{% url 'log-in' %}" class="btn btn-primary mr-2">Login</a>
                         <a href="{% url 'sign-up' %}" class="btn btn-outline-primary">Register</a>
                     {% endif %}
-                    <li class="nav-item"><a class="nav-link active" href="{% url "home"%}"><i class="fas fa-tachometer-alt"></i><span>Dashboard</span></a></li>
                     <li class="nav-item"><a class="nav-link active" href="{% url "candidate_pool_dashboard"%}"><i class="fas fa-tachometer-alt"></i><span>Candidate Pool</span></a></li>
                     {% if user_type == "hr_staff" %}
+                        <li class="nav-item"><a class="nav-link active" href="{% url "hr_dashboard"%}"><i class="fas fa-tachometer-alt"></i><span>Dashboard</span></a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url "hr_profile" %}"><i class="fas fa-user"></i><span>Profile</span></a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url "my_interviews" %}"><i class="fas fa-user"></i><span>My Interviews</span></a></li>
                     {% elif user_type == "organization_staff" %}
+                        <li class="nav-item"><a class="nav-link active" href="{% url "organization_dashboard"%}"><i class="fas fa-tachometer-alt"></i><span>Dashboard</span></a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url "organization_profile" %}"><i class="fas fa-user"></i><span>Profile</span></a></li>
                     {% elif user_type == "Director" %}
+                        <li class="nav-item"><a class="nav-link active" href="{% url "director_dashboard"%}"><i class="fas fa-tachometer-alt"></i><span>Dashboard</span></a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url "director_profile" %}"><i class="fas fa-user"></i><span>Profile</span></a></li>
 {#                    {% else %}#}
 {#                        <li class="nav-item"><a class="nav-link" href="{% url "log-in" %}"><i class="fas fa-user"></i><span>Profile</span></a></li>#}
@@ -301,29 +303,23 @@
                             <div class="col-lg-6 mb-4">
                                 <div class="card shadow mb-4">
                                     <div class="card-header py-3">
-                                        <h6 class="text-primary fw-bold m-0">Projects</h6>
+                                        <h6 class="text-primary fw-bold m-0">Recruitment Progress</h6>
                                     </div>
                                     <div class="card-body">
-                                        <h4 class="small fw-bold">Server migration<span class="float-end">20%</span></h4>
-                                        <div class="progress mb-4">
-                                            <div class="progress-bar bg-danger" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%;"><span class="visually-hidden">20%</span></div>
-                                        </div>
-                                        <h4 class="small fw-bold">Sales tracking<span class="float-end">40%</span></h4>
-                                        <div class="progress mb-4">
-                                            <div class="progress-bar bg-warning" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%;"><span class="visually-hidden">40%</span></div>
-                                        </div>
-                                        <h4 class="small fw-bold">Customer Database<span class="float-end">60%</span></h4>
-                                        <div class="progress mb-4">
-                                            <div class="progress-bar bg-primary" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"><span class="visually-hidden">60%</span></div>
-                                        </div>
-                                        <h4 class="small fw-bold">Payout Details<span class="float-end">80%</span></h4>
-                                        <div class="progress mb-4">
-                                            <div class="progress-bar bg-info" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"><span class="visually-hidden">80%</span></div>
-                                        </div>
-                                        <h4 class="small fw-bold">Account setup<span class="float-end">Complete!</span></h4>
-                                        <div class="progress mb-4">
-                                            <div class="progress-bar bg-success" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"><span class="visually-hidden">100%</span></div>
-                                        </div>
+                                        {% for application in applications %}
+                                            <h4 class="small fw-bold">{{ application.candidate.name }} {{ application.candidate.surname }} - {{ application.job.title }}<span class="float-end">{{ application.status }}</span></h4>
+                                            <p>Phone: {{ application.candidate.phone }}</p>
+                                            <p>Position: {{ application.job.position }}</p>
+                                            <div class="progress mb-4">
+                                                {% if application.status == "Pending" %}
+                                                    <div class="progress-bar bg-danger" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%;"><span class="visually-hidden">20%</span></div>
+                                                {% elif application.status == "Interviewing" %}
+                                                    <div class="progress-bar bg-warning" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%;"><span class="visually-hidden">40%</span></div>
+                                                {% elif application.status == "HR Assesment" %}
+                                                    <div class="progress-bar bg-primary" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"><span class="visually-hidden">60%</span></div>
+                                                {% endif %}
+                                            </div>
+                                        {% endfor %}
                                     </div>
                                 </div>
                                 <div class="card shadow mb-4">
