--- a/biko_hr/templates/home.html
+++ b/biko_hr/templates/home.html
@@ -32,6 +32,14 @@
             height: auto;    /* Maintain aspect ratio */
             filter: invert(0); /* Converts white to black for images with transparent backgrounds */
         }
+
+
+        .sidebar {
+            height: 100%; /* Ensure full height */
+            overflow-y: auto; /* Allow scrolling if content overflows */
+        }
+
+
     </style>
 {% endblock %}
 
@@ -41,51 +49,56 @@
 <body id="page-top">
     <div id="wrapper">
         {% block navigation %}
-        <nav class="navbar align-items-start sidebar sidebar-dark accordion bg-gradient-primary p-0 navbar-dark">
-            <div class="container-fluid d-flex flex-column p-0"><a class="navbar-brand d-flex justify-content-center align-items-center sidebar-brand m-0" href="#">
-                    <div class="sidebar-brand-icon">
-{#                        <i class="fas fa-laugh-wink"></i></div>#}
-                        <img src="{% static 'aplus-acibadem-logo-beyaz-HD-transformed.png' %}" alt="Aplus HR Logo" class="logo-img" style="max-width: 70%; height: auto;" /></div>
-                    <div class="sidebar-brand-text"></div>
-                </a>
-                <hr class="sidebar-divider my-0" />
-                <ul id="accordionSidebar" class="navbar-nav text-light">
-                    {% if user.is_authenticated %}
-                    <span class="navbar-text">
-                          Welcome, {{ user.first_name}} {{user.last_name }}
-                    </span>
-                    <a href="{% url 'log-out' %}" class="btn btn-primary mr-2">Log out</a>
-                        {% if user.is_staff %}
+        <div id="sidebar">
+            <nav class="navbar align-items-start sidebar sidebar-dark accordion bg-gradient-primary p-0 navbar-dark">
+                <div class="container-fluid d-flex flex-column p-0"><a class="navbar-brand d-flex justify-content-center align-items-center sidebar-brand m-0" href="#">
+                        <div class="sidebar-brand-icon">
+    {#                        <i class="fas fa-laugh-wink"></i></div>#}
+                            <img src="{% static 'aplus-acibadem-logo-beyaz-HD-transformed.png' %}" alt="Aplus HR Logo" class="logo-img" style="max-width: 70%; height: auto;" /></div>
+                        <div class="sidebar-brand-text"></div>
+                    </a>
+                    <hr class="sidebar-divider my-0" />
+                    <ul id="accordionSidebar" class="navbar-nav text-light">
+                        {% if user.is_authenticated %}
+                        <span class="navbar-text">
+                              Welcome, {{ user.first_name}} {{user.last_name }}
+                        </span>
+                        <a href="{% url 'log-out' %}" class="btn btn-primary mr-2">Log out</a>
+                            {% if user.is_staff %}
+                            {% endif %}
+                        {% else %}
+                            <a href="{% url 'log-in' %}" class="btn btn-primary mr-2">Login</a>
+                            <a href="{% url 'sign-up' %}" class="btn btn-outline-primary">Register</a>
                         {% endif %}
-                    {% else %}
-                        <a href="{% url 'log-in' %}" class="btn btn-primary mr-2">Login</a>
-                        <a href="{% url 'sign-up' %}" class="btn btn-outline-primary">Register</a>
-                    {% endif %}
-                    <li class="nav-item"><a class="nav-link active" href="{% url "candidate_pool_dashboard"%}"><i class="fas fa-tachometer-alt"></i><span>Candidate Pool</span></a></li>
-                    {% if user_type == "hr_staff" %}
-                        <li class="nav-item"><a class="nav-link active" href="{% url "hr_dashboard"%}"><i class="fas fa-tachometer-alt"></i><span>Dashboard</span></a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url "hr_profile" %}"><i class="fas fa-user"></i><span>Profile</span></a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url "my_interviews" %}"><i class="fas fa-user"></i><span>My Interviews</span></a></li>
-                    {% elif user_type == "organization_staff" %}
-                        <li class="nav-item"><a class="nav-link active" href="{% url "organization_dashboard"%}"><i class="fas fa-tachometer-alt"></i><span>Dashboard</span></a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url "organization_profile" %}"><i class="fas fa-user"></i><span>Profile</span></a></li>
-                    {% elif user_type == "Director" %}
-                        <li class="nav-item"><a class="nav-link active" href="{% url "director_dashboard"%}"><i class="fas fa-tachometer-alt"></i><span>Dashboard</span></a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url "director_profile" %}"><i class="fas fa-user"></i><span>Profile</span></a></li>
-{#                    {% else %}#}
-{#                        <li class="nav-item"><a class="nav-link" href="{% url "log-in" %}"><i class="fas fa-user"></i><span>Profile</span></a></li>#}
-                    {% endif %}
-{#                    <li class="nav-item"><a class="nav-link" href="table.html"><i class="fas fa-table"></i><span>Table</span></a></li>#}
-{#                    <li class="nav-item"><a class="nav-link" href="login.html"><i class="far fa-user-circle"></i><span>Login</span></a></li>#}
-{#                    <li class="nav-item"><a class="nav-link" href="register.html"><i class="fas fa-user-circle"></i><span>Register</span></a></li>#}
-{#                    <li class="nav-item"><a class="nav-link" href="forgot-password.html"><i class="fas fa-key"></i><span>Forgotten Password</span></a></li>#}
-{#                    <li class="nav-item"><a class="nav-link" href="404.html"><i class="fas fa-exclamation-circle"></i><span>Page Not Found</span></a></li>#}
-{#                    <li class="nav-item"><a class="nav-link" href="blank.html"><i class="fas fa-window-maximize"></i><span>Blank Page</span></a></li>#}
-                </ul>
+                        <li class="nav-item"><a class="nav-link active" href="{% url "candidate_pool_dashboard"%}"><i class="fas fa-tachometer-alt"></i><span>Candidate Pool</span></a></li>
+                        {% if user_type == "hr_staff" %}
+                            <li class="nav-item"><a class="nav-link active" href="{% url "hr_dashboard"%}"><i class="fas fa-tachometer-alt"></i><span>Dashboard</span></a></li>
+                            <li class="nav-item"><a class="nav-link" href="{% url "hr_profile" %}"><i class="fas fa-user"></i><span>Profile</span></a></li>
+                            <li class="nav-item"><a class="nav-link" href="{% url "my_interviews" %}"><i class="fas fa-user"></i><span>My Interviews</span></a></li>
+                        {% elif user_type == "organization_staff" %}
+                            <li class="nav-item"><a class="nav-link active" href="{% url "organization_dashboard"%}"><i class="fas fa-tachometer-alt"></i><span>Dashboard</span></a></li>
+                            <li class="nav-item"><a class="nav-link" href="{% url "organization_profile" %}"><i class="fas fa-user"></i><span>Profile</span></a></li>
+                        {% elif user_type == "Director" %}
+                            <li class="nav-item"><a class="nav-link active" href="{% url "director_dashboard"%}"><i class="fas fa-tachometer-alt"></i><span>Dashboard</span></a></li>
+                            <li class="nav-item"><a class="nav-link" href="{% url "director_profile" %}"><i class="fas fa-user"></i><span>Profile</span></a></li>
+    {#                    {% else %}#}
+    {#                        <li class="nav-item"><a class="nav-link" href="{% url "log-in" %}"><i class="fas fa-user"></i><span>Profile</span></a></li>#}
+                        {% endif %}
+    {#                    <li class="nav-item"><a class="nav-link" href="table.html"><i class="fas fa-table"></i><span>Table</span></a></li>#}
+    {#                    <li class="nav-item"><a class="nav-link" href="login.html"><i class="far fa-user-circle"></i><span>Login</span></a></li>#}
+    {#                    <li class="nav-item"><a class="nav-link" href="register.html"><i class="fas fa-user-circle"></i><span>Register</span></a></li>#}
+    {#                    <li class="nav-item"><a class="nav-link" href="forgot-password.html"><i class="fas fa-key"></i><span>Forgotten Password</span></a></li>#}
+    {#                    <li class="nav-item"><a class="nav-link" href="404.html"><i class="fas fa-exclamation-circle"></i><span>Page Not Found</span></a></li>#}
+    {#                    <li class="nav-item"><a class="nav-link" href="blank.html"><i class="fas fa-window-maximize"></i><span>Blank Page</span></a></li>#}
+                    </ul>
 
-                <div class="text-center d-none d-md-inline"><button id="sidebarToggle" class="btn rounded-circle border-0" type="button"></button></div>
-            </div>
-        </nav>
+                    <div id="sidebarHoverArea" class="text-center d-none d-md-inline">
+                        <button id="sidebarToggle" class="btn rounded-circle border-0" type="button"></button>
+                    </div>
+    {#                <div class="text-center d-none d-md-inline"><button id="sidebarToggle" class="btn rounded-circle border-0" type="button"></button></div>#}
+                </div>
+            </nav>
+        </div>
         {% endblock %}
 
         <div id="content-wrapper" class="d-flex flex-column">
@@ -93,9 +106,9 @@
                     {% block topbar %}
                     <nav class="navbar navbar-expand bg-white shadow mb-4 topbar static-top navbar-light">
                         <div class="container-fluid"><button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle me-3" type="button"><i class="fas fa-bars"></i></button>
-                            <form class="d-none d-sm-inline-block me-auto ms-md-3 my-2 my-md-0 mw-100 navbar-search">
-                                <div class="input-group"><input class="bg-light form-control border-0 small" type="text" placeholder="Search for ..." /><button class="btn btn-primary py-0" type="button"><i class="fas fa-search"></i></button></div>
-                            </form>
+{#                            <form class="d-none d-sm-inline-block me-auto ms-md-3 my-2 my-md-0 mw-100 navbar-search">#}
+{#                                <div class="input-group"><input class="bg-light form-control border-0 small" type="text" placeholder="Search for ..." /><button class="btn btn-primary py-0" type="button"><i class="fas fa-search"></i></button></div>#}
+{#                            </form>#}
                             <ul class="navbar-nav flex-nowrap ms-auto">
                                 <li class="nav-item dropdown d-sm-none no-arrow"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#"><i class="fas fa-search"></i></a>
                                     <div class="dropdown-menu dropdown-menu-end p-3 animated--grow-in" aria-labelledby="searchDropdown">
@@ -433,6 +446,24 @@
     <!-- In the head section or at the end of body -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
+
+<script>
+    let sidebar = document.getElementById("sidebar");
+    let sidebarToggle = document.getElementById("sidebarToggle");
+
+    // Fare sidebar'a veya hover alanına girince aç
+    document.getElementById("sidebarHoverArea").addEventListener("mouseenter", function() {
+        if (!sidebar.classList.contains("toggled")) {
+            sidebarToggle.click();
+        }
+    });
+
+    sidebar.addEventListener("mouseleave", function() {
+        if (!sidebar.classList.contains("toggled")) {
+            sidebarToggle.click();
+        }
+    });
+</script>
 </body>
 
 </html>
