--- a/director/templates/director_profile.html
+++ b/director/templates/director_profile.html
@@ -71,7 +71,7 @@
                                             <label class="form-label" for="role"><strong>Role</strong></label>
                                             <input class="form-control" type="text" id="role" value="HR Staff" readonly>
                                         </div>
-                                        {% if user.is_Director %}
+                                        {% elif user.is_Director %}
                                         <div class="mb-3">
                                             <label class="form-label" for="role"><strong>Role</strong></label>
                                             <input class="form-control" type="text" id="role" value="Director" readonly>
